// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly when disabled 1`] = `
<div
  className="monday-style-menu-item monday-style-menu-item--disabled"
  onClick={[Function]}
>
  <div
    className="monday-style-menu-item__title"
  >
    my item
  </div>
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      className="dialog-content-container dialog-content-container--popover dialog-content-container--medium"
      role="dialog"
    />
  </div>
</div>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<div
  className="monday-style-menu-item dummy-class-name"
  onClick={[Function]}
>
  <div
    className="monday-style-menu-item__title"
  >
    
  </div>
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      className="dialog-content-container dialog-content-container--popover dialog-content-container--medium"
      role="dialog"
    />
  </div>
</div>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<div
  className="monday-style-menu-item"
  onClick={[Function]}
>
  <div
    className="monday-style-menu-item__title"
  >
    
  </div>
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      className="dialog-content-container dialog-content-container--popover dialog-content-container--medium"
      role="dialog"
    />
  </div>
</div>
`;

exports[`Snapshots renders correctly with title and icon 1`] = `
<div
  className="monday-style-menu-item"
  onClick={[Function]}
>
  <div
    className="monday-style-menu-item__icon-wrapper"
  >
    <span
      aria-label="my item"
      className="icon_component monday-style-menu-item__icon icon_component--no-focus-style fa fa fa-star"
      onClick={[Function]}
      role=""
      tabIndex={-1}
    />
  </div>
  <div
    className="monday-style-menu-item__title"
  >
    my item
  </div>
  <div
    className="monday-style-menu-item__popover"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      className="dialog-content-container dialog-content-container--popover dialog-content-container--medium"
      role="dialog"
    />
  </div>
</div>
`;
